---
(4.2.6p3-RC9) 2010/11/10 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1574] sntp:set_time doesn't set tv_usec correctly.
* [Bug 1681] sntp logging cleanup.
* [Bug 1683] Interface binding does not seem to work as intended.
* [Bug 1691] Use first NMEA sentence each second.
* [Bug 1692] packageinfo.sh needs to be "sourced" using ./ .
* [Bug 1709] ntpdate ignores replies with equal receive and transmit
  timestamps.
* Backport sntp from -dev

---
(4.2.6p3-RC8) 2010/10/29 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1685] NMEA driver mode byte confusion.
* First cut at using scripts/checkChangeLog.

---
(4.2.6p3-RC7) 2010/10/25 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1676] NMEA: $GPGLL did not work after fix for Bug 1571.
* Added scripts/checkChangeLog.

---
(4.2.6p3-RC6) 2010/10/24 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1571] NMEA does not relate data to PPS edge.
* [Bug 1572] NMEA time adjustment for GPZDG buggy.
* [Bug 1675] Prohibit includefile remote config.

---
(4.2.6p3-RC5) 2010/10/22 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1649] Require NMEA checksum if $GPRMC or previously seen.
* [Bug 1669] NTP 4.2.6p2 fails to compile on IBM AIX 5.3.

---
(4.2.6p3-RC4) 2010/10/16 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 1584] wrong SNMP type for precision, resolution.
* [Bug 1659] Need CLOCK_TRUETIME not CLOCK_TRUE.
* [Bug 1665] is_anycast() u_int32_t should be u_int32.
* ntpsnmpd, libntpq warning cleanup.

---
(4.2.6p3-RC3) 2010/10/14 Released by Harlan Stenn <stenn@ntp.org>

* [Bug 750] Non-existing device causes coredump with RIPE-NCC driver.
* [Bug 1080] ntpd on ipv6 routers very chatty.
* [Bug 1567] Support Arbiter 1093C Satellite Clock on Windows.
* [Bug 1581] printf format string mismatch leftover.
* [Bug 1584] ntpsnmpd OID must be mib-2.197.
* [Bug 1643] Range-check the decoding of the RIPE-NCC status codes.
* [Bug 1644] cvo.sh should use lsb_release to identify linux distros.