@@ -81,7 +81,7 @@ typedef enum {
 
 
 isc_boolean_t	get_broadcastclient_flag(void);
-isc_boolean_t	is_ip_address(const char *, isc_netaddr_t *);
+extern int	is_ip_address(const char *, sockaddr_u *);
 extern void	sau_from_netaddr(sockaddr_u *, const isc_netaddr_t *);
 extern void add_nic_rule(nic_rule_match match_type, const char *if_name,
 			 int prefixlen, nic_rule_action action);
