@@ -1,4 +1,8 @@
 ---
+
+* [Bug 1683] Non-localhost on loopback exempted from nic rules.
+
+---
 (4.2.6p3-RC9) 2010/11/10 Released by Harlan Stenn <stenn@ntp.org>
 
 * [Bug 1574] sntp:set_time doesn't set tv_usec correctly.
